include Make.inc

simple: simple_su3_test.o simple_su3_expr.o simple_simd_test.o

EXTRA_LIBRARIES = libsimple_su3_test.a libsimple_su3_expr.a libsimple_simd_test.a

libsimple_su3_test_a_SOURCES = simple_su3_test.cc

libsimple_su3_expr_a_SOURCES = simple_su3_expr.cc

libsimple_simd_test_a_SOURCES = simple_simd_test.cc
